Initial compilation for pacman game

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,13 @@ add_definitions(-std=c++17)
 set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
-project(HelloWorld)
+project(Pacman)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/" "/usr/lib/")
 
 find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS} src)
 
-add_executable(HelloWorld src/main.cpp)
+add_executable(Pacman src/main.cpp src/game.cpp src/controller.cpp src/renderer.cpp src/pacman.cpp)
 string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
-target_link_libraries(HelloWorld ${SDL2_LIBRARIES})
+target_link_libraries(Pacman ${SDL2_LIBRARIES})
