Add monster threads and sync them with main game thread

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,10 @@ project(Pacman)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/" "/usr/lib/")
 
+find_package (Threads)
 find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS} src)
 
-add_executable(Pacman src/main.cpp src/game.cpp src/controller.cpp src/renderer.cpp src/pacman.cpp)
+add_executable(Pacman src/main.cpp src/game.cpp src/controller.cpp src/renderer.cpp src/pacman.cpp src/monster.cpp)
 string(STRIP ${SDL2_LIBRARIES} SDL2_LIBRARIES)
-target_link_libraries(Pacman ${SDL2_LIBRARIES})
+target_link_libraries(Pacman ${SDL2_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
